# UniPresence

./: README.md  aluno.py  database_unifeob.sql  main.py  pessoa.py  professor.py  pyproject.toml  script_modelagem.sql  teste.txt  validacao_geografica.py
unipresence/: __main__.py  aluno.py  bd.py  interfaces.py  menu.py  pessoa.py  professor.py  registro_presenca.py  usuario.py  validacao_geografica.py
